# am2302_rmt

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml
.github/workflows/: upload_component.yml
examples/get_started/: CMakeLists.txt  README.md
examples/get_started/main/: CMakeLists.txt  am2302_example_main.c  idf_component.yml
include/: am2302_rmt.h
src/: am2302_rmt.c
